assets/css/style.css
/* ... */
.footer_inner_ctc_info p font {
  color: #6e6e6e;
}

.footer_inner_payment_title h5 {
  font-size: 0.9375rem;
  font-weight: 400;
}

.footer_bootom_copyright p {
  color: #6e6e6e;
  font-size: 0.9375rem;
  font-weight: 500;
}
.footer_bootom_copyright p font {
  color: #5e9d03;
}

.footer_bootom_privicy .priv, .footer_bootom_terms .priv, .footer_bootom_refunds .priv {
  color: #62a403;
}
.footer_bootom_privicy p, .footer_bootom_terms p, .footer_bootom_refunds p {
  color: #9f9f9f;
  font-size: 0.875rem;
  font-weight: 500;
}
.footer_bootom_privicy p:after, .footer_bootom_terms p:after, .footer_bootom_refunds p:after {
  width: 2px;
  height: 15px;
  content: "";
  top: 50%;
  right: -27px;
  -webkit-transform: translateY(-50%);
          transform: translateY(-50%);
  background-color: #6e6e6e;
  position: absolute;
}

.footer_left_thumb {
  top: 50px;
  left: -150px;
}

.footer_right_thumb {
  top: 50px;
  right: -150px;
}

.gallery_content_wrap {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

.gallery_lft_title {
  max-width: 18rem;
  height: auto;
}
.gallery_lft_title h2 {
  color: #292929;
  font-size: 2.8125rem;
  font-weight: 700;
}

.gallery_lft_desc p {
  color: #afb2ae;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 30px;
}

.gallery_mid_content {
  max-width: 28.75rem;
  border-radius: 1rem;
  -webkit-box-shadow: 5px 5px 30px 10px #ebe9e9 !important;
          box-shadow: 5px 5px 30px 10px #ebe9e9 !important;
  margin: 0 auto;
}

.gallery_mid_thumb img {
  width: 100%;
  height: 13.875rem;
}

.gallery_mid_inner_content h2 {
  max-width: 14.375rem;
  color: #252525;
  font-size: 1.375rem;
  font-weight: 700;
}

.gallery_mid_author_content,
.gallery_end_author_content {
  max-width: 16.375rem;
}
.gallery_mid_author_content .far,
.gallery_end_author_content .far {
  color: #46ba56;
}

.gallery_mid_author_title span,
.gallery_mid_author_time span,
.gallery_end_author_title span,
.gallery_end_author_time span {
  color: #9fadb5;
  font-size: 0.8375rem;
  font-weight: 400;
}

.gallery_mid_desc p {
  color: #9fadb5;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 32px;
}

.gallery_end_content {
  max-width: 28.75rem;
  height: 500px;
  border-radius: 1rem;
  -webkit-box-shadow: 5px 5px 30px 10px #ebe9e9 !important;
          box-shadow: 5px 5px 30px 10px #ebe9e9 !important;
}

.gallery_end_thumb {
  width: 10rem;
  height: 6rem;
  border-radius: 15px;
  overflow: hidden;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  cursor: pointer;
}
.gallery_end_thumb img {
  background-size: cover;
  background-origin: border-box;
}
.gallery_end_thumb:hover {
  opacity: 0.7;
  -webkit-transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}

.gallery_end_inner_content h4 {
  color: #252525;
  font-size: 1rem;
  font-weight: 500;
  -webkit-transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}
.gallery_end_inner_content h4:hover {
  color: #8799a3;
  -webkit-transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
  transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}

.gallery_left_thumb {
  bottom: 70px;
  left: -50px;
}

.gallery_right_thumb {
  top: 70px;
  right: -50px;
}

.header_section {
  top: 0px;
  left: 0px;
  right: 0px;
  z-index: 99;
  position: relative;
  background-color: #ffffff;
  max-width: 100%;
  height: auto;
}

div#main_search_collapse {
  position: fixed;
  width: 100%;
  top: 123px;
  -webkit-box-shadow: 0 5px 20px 0 rgba(143, 143, 143, 0.15);
          box-shadow: 0 5px 20px 0 rgba(143, 143, 143, 0.15);
}

div#main_search_collapse2 {
  position: fixed;
  width: 100%;
  top: 181px;
  -webkit-box-shadow: 0 5px 20px 0 rgba(143, 143, 143, 0.15);
          box-shadow: 0 5px 20px 0 rgba(143, 143, 143, 0.15);
}

.top_inner_searchbar {
  padding: 21.8px 0;
}

.logo img {
  min-width: 125px;
  height: 30px;
}

.header_bottom_main {
  top: 0px;
  left: 0px;
  right: 0px;
  z-index: 100;
  position: relative;
  background-color: #ffffff;
  max-width: 100%;
  height: auto;
}
.header_bottom_main.sticky {
  position: fixed;
  -webkit-box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.15);
          box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.15);
  -webkit-animation: 0.5s ease-in-out 0s normal none 1 running fadeInDown;
          animation: 0.5s ease-in-out 0s normal none 1 running fadeInDown;
}
.header_bottom_main.sticky .webmenu_bottom_shape_left {
  display: none;
}

.header_border {
  border-bottom: 6px solid;
  -o-border-image: linear-gradient(to right, #01b2ec 25%, #0412de 25%, #460b99 50%, #8100c8 50%, #d20097 75%) 5;
     border-image: -webkit-gradient(linear, left top, right top, color-stop(25%, #01b2ec), color-stop(25%, #0412de), color-stop(50%, #460b99), color-stop(50%, #8100c8), color-stop(75%, #d20097)) 5;
     border-image: linear-gradient(to right, #01b2ec 25%, #0412de 25%, #460b99 50%, #8100c8 50%, #d20097 75%) 5;
}

.header_bottom_main.sticky div#main_search_collapse {
  top: 81px;
}

.webmenu_bottom_shape_left {
  top: 72px;
  left: -60px;
}

.top_inner_main {
  top: 0px;
  left: 0px;
  right: 0px;
  z-index: 99;
  position: relative;
  background-color: #ffffff;
  max-width: 100%;
  height: auto;
}
.top_inner_main.sticky {
  position: fixed;
  -webkit-box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.15);
          box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.15);
  -webkit-animation: 0.5s ease-in-out 0s normal none 1 running fadeInDown;
          animation: 0.5s ease-in-out 0s normal none 1 running fadeInDown;
}

.top_inner_main.sticky div#main_search_collapse {
  top: 81px;
}

.top_header_main {
  background-color: #e66c08;
  height: 2.5rem;
}

.navbar3_bottom {
  top: 0px;
  left: 0px;
  right: 0px;
  position: relative;
  background-color: #ffffff;
  max-width: 100%;
  height: auto;
}
/* ... */

